# truss_backend

./: .gitignore  README.md  main.py  pyproject.toml  scripts.py
config/: CORS.py  database.py
func/: get_count.py
model/: BuildingModel.py  HeartModel.py  HouseModel.py  OfficeModel.py  PersonModel.py  PostModel.py  UserModel.py  model.py
query/: addModel.sql  test_query.sql
routers/: builder_router.py  constructor_router.py  house_router.py  office_router.py  person_router.py  post_router.py  security_router.py  user_router.py
schemas/: BuildingSchema.py  HouseSchema.py  OfficeSchema.py  PersonSchema.py  PostSchema.py  UserSchema.py  schema.py
