[tool.poetry]
name = "truss-backend"
version = "0.1.0"
description = "truss api"
authors = ["Mindul <pencake33@naver.com>"]
readme = "README.md"
packages = [{include = "truss_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"
pymysql = "^1.1.0"
async-generator = "^1.10"
async-exit-stack = "^1.0.1"
python-dotenv = "^1.0.0"
mysqlclient = "^2.2.0"

[tool.poetry.scripts]
execute = "scripts:execute"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
